# Oil-Intelligence-AI

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  architecture.md  data-sources.md  docker-compose.yml  package-lock.json  package.json  roadmap.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260510_01_initial.py  20260510_02_enterprise_extensions.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  pagination.py  router.py
apps/api/app/clients/: __init__.py  eia_client.py  fred_client.py  gdelt_client.py  satellite_adapters.py  volve_loader.py
apps/api/app/core/: config.py  database.py  logging.py  request_context.py
apps/api/app/models/: __init__.py  base.py  enums.py  event.py  field.py  maritime.py  market.py  risk.py  satellite.py  scenario.py  vector.py
apps/api/app/repositories/: __init__.py  base.py  event_repository.py  field_repository.py  maritime_repository.py  market_repository.py  satellite_repository.py
apps/api/app/schemas/: __init__.py  alert.py  event.py  field.py  health.py  maritime.py  market.py  pagination.py  report.py  risk.py  satellite.py  scenario.py
apps/api/app/seed/: __init__.py  __main__.py  seed_data.py
apps/api/app/services/: __init__.py  alert_service.py  event_classifier.py  event_service.py  field_service.py  maritime_service.py  market_data_service.py  (+5 more)
apps/api/tests/: test_alert_service.py  test_event_classifier.py  test_report_service.py  test_risk_service.py  test_scenario_service.py  test_vector_utils.py
(+73 files in other folders)
